Put in real contents

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<html><h1>Hello World!</h1></html>
+<html>
+<title>Welcome to my Github page!</title>
+<head>
+	<style type="text/css">body{ line-height:120%;margin:2;background-color:#ECECEC;text-align:center;margin-left:auto; margin-right:auto;font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 25px; }</style>
+</head>
+<body><br><br><br>
+	<h1><strong>Welcome to my Github page!</strong></h1><br><h2>Click here to visit my <a href="https://github.com/tonyxue">Github profile page</a>!</h2>
+	<br>
+	<h3><u>Projects on Github that I'm currently doing:</u><br><br>
+	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>)<br><br>
+	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup">master</a>)<br><br></h3>
+	2014, Handmade in Beijing
+</body>
+</html>
