add fasterapple 'official site' link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<h1><strong>Welcome to my Github page!</strong></h1><br><h2><a href="https://github.com/tonyxue">Click here to visit my Github profile page!</a></h2>
 	<br>
 	<h3><u>Projects on Github that I'm currently doing:</u><br><br>
-	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>)<br><br>
+	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>, <a href="http://fasterapple.com">official site</a>)<br><br>
 	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup">master</a>)<br><br></h3>
 	2014, Handmade in Beijing
 </body>
