--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body><br><br><br>
 	<h1><strong>Welcome to my Github page!</strong></h1>(<a href="http://en.whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my Github profile page!</a></h2>
 	<br>
-	<h3><u>Projects on Github that I'm currently doing:</u><br><br>
+	<h3><u>My public projects on Github:</u><br><br>
 	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>, <a href="http://fasterapple.com">official site</a>)<br><br>
 	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup">master</a>)<br><br></h3>
 	2014, Handmade in Beijing
