modify the link to my introductory page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<style type="text/css">body{ line-height:120%;margin:2;background-color:#ECECEC;text-align:center;margin-left:auto; margin-right:auto;font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 25px; }</style>
 </head>
 <body><br><br><br>
-	<h1><strong>Welcome to my Github page!</strong></h1>(<a href="http://en.whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my Github profile page!</a></h2>
+	<h1><strong>Welcome to my Github page!</strong></h1>(<a href="http://whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my Github profile page!</a></h2>
 	<br>
 	<h3><u>My public projects on Github:</u><br><br>
 	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>, <a href="http://fasterapple.com">official site</a>)<br><br>
