Update URLs and new project info
Also fixed the spelling of GitHub: “Github” => “”GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<style type="text/css">body{ line-height:120%;margin:2;background-color:#ECECEC;text-align:center;margin-left:auto; margin-right:auto;font-family: Helvetica, Verdana, Arial, sans-serif; font-size: 25px; }</style>
 </head>
 <body><br><br><br>
-	<h1><strong>Welcome to my Github page!</strong></h1>(<a href="http://whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my Github profile page!</a></h2>
+	<h1><strong>Welcome to my GitHub page!</strong></h1>(<a href="http://whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my GitHub profile page!</a></h2>
 	<br>
-	<h3><u>My public projects on Github:</u><br><br>
-	<strong>fasterapple</strong>(<a href="https://github.com/tonyxue/github">master</a>, <a href="https://opensrc.fasterapple.com">gh-pages</a>, <a href="http://fasterapple.com">official site</a>)<br><br>
-	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup">master</a>)<br><br></h3>
+	<h3><u>My main projects on GitHub:</u><br><br>
+	<strong>fasterapple</strong>(<a href="https://github.com/fasterapple/fasterapple/tree/master">master</a>, <a href="https://opensrc.fasterapple.com">Project GitHub page</a>, <a href="http://fasterapple.com">Project site</a>)<br><br>
+	<strong>AccelNG</strong>(<a href="https://github.com/OpenBIRD/AccelNG/tree/master">master</a>)<br><br>
+	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup/tree/master">master</a>)<br><br><br>
+	<u>I'm also helping out:</u><br><br>
+	<strong>github-cheat-sheet</strong>(<a href="https://github.com/tiimgreen/github-cheat-sheet/tree/master">master</a>, <a href="https://github.com/tonyxue/github-cheat-sheet">my fork</a>)<br><br></h3>
 	2014, Handmade in Beijing
 </body>
 </html>
