--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body><br><br><br>
 	<h1><strong>Welcome to my GitHub page!</strong></h1>(<a href="http://whoami.tonyxue.asia">who r u?</a>)<br><h2><a href="https://github.com/tonyxue">Click here to visit my GitHub profile page!</a></h2>
 	<br>
-	<h3><u>My main projects on GitHub:</u><br><br>
+	<h3><u>I am currently working on:</u><br><br>
+	<strong>crouton</strong>(<a
+                href="https://github.com/dnschneid/crouton/tree/master">master</a>,
+        <a href="https://github.com/tonyxue/cruise/tree/master">my fork</a>)<br><br><br>
 	<strong>fasterapple</strong>(<a href="https://github.com/fasterapple/fasterapple/tree/master">master</a>, <a href="https://opensrc.fasterapple.com">Project GitHub page</a>, <a href="http://fasterapple.com">Project site</a>)<br><br>
-	<strong>AccelNG</strong>(<a href="https://github.com/OpenBIRD/AccelNG/tree/master">master</a>)<br><br>
-	<strong>renren_cleanup</strong>(<a href="https://github.com/tonyxue/renren_cleanup/tree/master">master</a>)<br><br><br>
 	<u>I'm also helping out:</u><br><br>
-	<strong>github-cheat-sheet</strong>(<a href="https://github.com/tiimgreen/github-cheat-sheet/tree/master">master</a>, <a href="https://github.com/tonyxue/github-cheat-sheet">my fork</a>)<br><br></h3>
-	2014, Handmade in Beijing
+	the translation for <strong>github-cheat-sheet</strong>(<a href="https://github.com/tiimgreen/github-cheat-sheet/tree/master">master</a>, <a href="https://github.com/tonyxue/github-cheat-sheet">my fork</a>)<br><br></h3>
+	2015, Handmade in Beijing
 </body>
 </html>
